tests/ui/move-captured-variable.stderr
error[E0507]: cannot move out of `a`, a captured variable in an `FnMut` closure
  --> $DIR/move-captured-variable.rs:13:9
   |
11 |       let a = String::new();
   |           - captured outer variable
12 |       foo(|| {
13 | /         async_stream_block! { //~ ERROR cannot move out of `a`, a captured variable in an `FnMut` closure
14 | |             yield a
   | |                   -
   | |                   |
   | |                   move occurs because `a` has type `std::string::String`, which does not implement the `Copy` trait
   | |                   move occurs due to use in generator
15 | |         };
   | |          ^
   | |          |
   | |__________move out of `a` occurs here
   |            in this macro invocation

error: aborting due to previous error

For more information about this error, try `rustc --explain E0507`.
